--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <name>Dimensional Analysis Library: Unit</name>
     <url>https://github.com/ecen/unit/</url>
 
-    <groupId>io.github.ecen.unit</groupId>
+    <groupId>io.guldbrand.unit</groupId>
     <artifactId>unit</artifactId>
-    <version>0.1.0-beta</version>
+    <version>0.2.0-beta</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -28,6 +28,7 @@
     <properties>
         <maven.compiler.source>10</maven.compiler.source>
         <maven.compiler.target>10</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
