--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>io.guldbrand.unit</groupId>
     <artifactId>unit</artifactId>
-    <version>0.2.1-beta</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
